<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>fr.openwide.alfresco</groupId>
	<artifactId>owsi-alfresco</artifactId>
	<version>0.9.5-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>OWSI Alfresco</name>
	<description>Capitalisation des développements utilisés sur les projets Alfresco</description>

	<properties>
		<jdk.version>11</jdk.version>
		<alfresco.groupId>org.alfresco</alfresco.groupId>
		<alfresco.platform.version>7.2.1</alfresco.platform.version>
	</properties>

	<modules>
		<module>owsi-alfresco-maven</module>
		<module>owsi-alfresco-repo</module>
		<module>owsi-alfresco-share</module>
		<module>owsi-alfresco-test</module>
	</modules>

	<organization>
		<name>Smile</name>
		<url>http://www.smile.fr/</url>
	</organization>

	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>${alfresco.groupId}</groupId>
				<artifactId>${alfresco.bomDependencyArtifactId}</artifactId>
				<version>${alfresco.platform.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>verify</phase>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
		
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.10.1</version>
					<configuration>
						<source>${jdk.version}</source>
						<target>${jdk.version}</target>
						<compilerArgument>-proc:none</compilerArgument>
						<testCompilerArgument>-proc:none</testCompilerArgument>
					</configuration>
				</plugin>
				<plugin>
					<groupId>com.amashchenko.maven.plugin</groupId>
					<artifactId>gitflow-maven-plugin</artifactId>
					<version>1.14.0</version>
					<configuration>
						<gitFlowConfig>
							<developmentBranch>dev</developmentBranch>
							<featureBranchPrefix>ft-</featureBranchPrefix>
							<releaseBranchPrefix>rl-</releaseBranchPrefix>
							<hotfixBranchPrefix>hf-</hotfixBranchPrefix>
						</gitFlowConfig>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<distributionManagement>
		<snapshotRepository>
			<id>nexus.internal.snapshots</id>
			<url>https://nexus.galaxy.intranet/repository/InternalSmileSnapshots/</url>
		</snapshotRepository>
		<repository>
			<id>nexus.internal.releases</id>
			<url>https://nexus.galaxy.intranet/repository/InternalSmileReleases/</url>
		</repository>
	</distributionManagement>

	<repositories>
		<repository>
			<id>alfresco-public</id>
			<url>https://artifacts.alfresco.com/nexus/content/groups/public</url>
		</repository>
		<repository>
			<id>alfresco-public-snapshots</id>
			<url>https://artifacts.alfresco.com/nexus/content/groups/public-snapshots</url>
			<snapshots>
				<enabled>true</enabled>
				<updatePolicy>daily</updatePolicy>
			</snapshots>
		</repository>
		<repository>
			<id>alfresco-internal</id>
			<url>https://artifacts.alfresco.com/nexus/content/groups/internal</url>
		</repository>


		<repository>
			<id>nexus.internal.releases</id>
			<url>https://nexus.galaxy.intranet/content/repositories/InternalSmileReleases/</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>nexus.internal.snapshots</id>
			<url>https://nexus.galaxy.intranet/content/repositories/InternalSmileSnapshots/</url>
			<releases>
				<enabled>false</enabled>
			</releases>
		</repository>

		<repository>
			<id>nexus.internal.third-party</id>
			<url>https://nexus.galaxy.intranet/content/repositories/nonCentralArtifacts/</url>
		</repository>
		<repository>
			<id>nexus.mirror.alfresco.release.repo</id>
			<url>https://nexus.galaxy.intranet/repository/alfresco-artifacts-repository/</url>
		</repository>
	</repositories>
	
	<pluginRepositories>
		<pluginRepository>
			<id>alfresco-plugin-public</id>
			<url>https://artifacts.alfresco.com/nexus/content/groups/public</url>
		</pluginRepository>
		<pluginRepository>
			<id>alfresco-plugin-public-snapshots</id>
			<url>https://artifacts.alfresco.com/nexus/content/groups/public-snapshots</url>
			<snapshots>
				<enabled>true</enabled>
				<updatePolicy>daily</updatePolicy>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>
	
	<profiles>
		<profile>
			<id>community</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<properties>
				<alfresco.bomDependencyArtifactId>acs-community-packaging</alfresco.bomDependencyArtifactId>
			</properties>
		</profile>
		<profile>
			<id>enterprise</id>
			<properties>
				<alfresco.bomDependencyArtifactId>acs-packaging</alfresco.bomDependencyArtifactId>
			</properties>
			<repositories>
				<!-- Alfresco Enterprise Edition Artifacts, put username/pwd for server 
				in settings.xml -->
				<repository>
					<id>alfresco-private-repository</id>
					<url>https://artifacts.alfresco.com/nexus/content/groups/private</url>
				</repository>
			</repositories>
		</profile>
	</profiles>
	
</project>
